	* changed a bit the initialization of the static psycle::host::logger::default_logger_ostream() in psycle/host/global.cpp.
	* plugin dir: temporary work around for msvc8 manifests.
	* replaced most of src/legacy with src/universalis ; only src/legacy/loggers.{c,h}pp left.

2006/03/13 20:35:04  jaz001

	* Fix for EOL (now for sure, windiff says it)

2006/03/12 20:11:17  jaz001

	* fixed wrong EOL coming from recent commits.

2006/03/09 18:44:10  johan-boule

	* increasing version after tagging

2006/03/09 18:41:53  johan-boule

	* increasing version and tagging

2006/03/09 17:56:43  johan-boule

	* more work on portability

2006/03/07 14:09:14  johan-boule

	* replaced some ms numeric types with std types
	* some global changes concerning #includes
	* other fixes here and there for portability

2006/02/28 11:44:35  johan-boule

	* reference to the AUTHORS file

2006/01/10 18:35:43 psycle 1.9.3 johan-boule

	* added dw's code for shadows on the wire arrows

2006/01/10 00:27:40 psycle 1.9.2 johan-boule

	* version 1.9.2

2006/01/09 03:14:46 psycle 1.9.1 johan-boule

	* version 1.9.1

2006/01/08 03:28:19  johan-boule

	* Happy New Year Psycle! (added to copyrights)

2005/11/04 17:13:22  johan-boule

	* not a stable release

2005/07/24 16:59:02  jaz001

	* fixed baground bitmap bug.
	* changed default colours for new release
	* rearranged the skin dialog buttons
	* fixed but with skin vu-meters.
	* muting note duplicator stops sending events.

2005/07/17 03:51:09  johan-boule

	* bugfix for midi controllers config dialog

2005/07/11 01:22:01  johan-boule

	* various little cleanup for 1.8 release

2005/07/10 21:08:20  jaz001

	* New defaults for machine parameters
	* New skin for machine parameters' knobs.
	* Importing configuration from older psycle's and psycle alpha.
	* removing unimplemented alk's mixer.
	* added comments about unfinished features.
	* fixed small but in "recent files".